plugins/transformation/correlation-id/2-echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: correlation-id-plugin
  namespace: testing
  annotations:
    konghq.com/plugins: correlation-id-plugin
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /correlation-id
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 80
